testament/tests/shouldfail/ttimeout2.nim
discard """
  timeout: 0.1
"""

from std/os import sleep

while true:
  sleep(100)